--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,4 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=AFF5B1994D102836690471AE0B242DDE
-ProjectName=Top Down BP Game Template
+ProjectName=Test Local Multiplayer
 
