--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=ue4summerjam
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Assets/DefaultMap.DefaultMap
+EditorStartupMap=/Game/Levels/World01.World01
 GameDefaultMap=/Game/Assets/DefaultMap.DefaultMap
 TransitionMap=
 bUseSplitscreen=False
