--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,4 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=AFF5B1994D102836690471AE0B242DDE
-ProjectName=Test Local Multiplayer
+ProjectName=UE4SummerJam
+Description=SummerJam!:)
 
