--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ue4summerjam
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/World01.World01
-GameDefaultMap=/Game/Assets/DefaultMap.DefaultMap
+EditorStartupMap=/Game/Levels/MenuMap.MenuMap
+GameDefaultMap=/Game/Levels/MenuMap.MenuMap
 TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
@@ -162,5 +162,3 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
