--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/Assets/Blueprints/GM_LocalMP.GM_LocalMP_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/Assets/Blueprints/BP_GameInstance.BP_GameInstance_C
 
 [/Script/NavigationSystem.RecastNavMesh]
 bDrawPolyEdges=False
@@ -162,3 +163,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
