Auto stash before merge of "master" and "origin/master"

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,3 +3,8 @@ ProjectID=AFF5B1994D102836690471AE0B242DDE
 ProjectName=UE4SummerJam
 Description=SummerJam!:)
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+ForDistribution=True
+BlueprintNativizationMethod=Inclusive
+
